Fix - Paparan Fungsi carian

--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script src="js/shared.js"></script>
     <script src="js/main.js"></script>
+    <!-- Mobile Search Sync for Cross-Browser Compatibility -->
+    <script src="js/mobile-search-sync.js"></script>
     
     <script>
         // Initialize everything
