Remove - Redundant Search

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script src="js/shared.js"></script>
     <script src="js/main.js"></script>
-    <!-- Mobile Search Sync for Cross-Browser Compatibility -->
-    <script src="js/mobile-search-sync.js"></script>
+    <!-- Search Enhancement for Cross-Browser Compatibility -->
+    <script src="js/search-enhancement.js"></script>
     
     <script>
         // Initialize everything
