--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
             <div class="col-12">
                 <div class="text-center mb-4">
                     <h2 class="display-5 fw-bold text-gradient">Hubungi Kami</h2>
-		    <p class="lead text-muted">Laman ini hanya memapaparkan produk dan servis Affiliate.
+		    <p class="lead text-muted">Laman ini hanya memaparkan produk dan servis Affiliate.
 		    Tiada produk dan servis sendiri buat masa ini yang memerlukan perniagaan berdaftar dan nombor pendaftaran perniagaan.</p>
                     <p class="lead text-muted">Namun laman ini juga mengandungi perkongsian teknikal IT, teknologi dan lain-lain. Jika ia menarik perhatian anda contohnya untuk kerjasama atau ingin luaskan rangkaian dengan minat yang sama, isikan borang di bawah.</p>
                 </div>
